# gvd

./: .dockerignore  .gitignore  ARCHITECTURE.md  COMPLETION_CHECKLIST.md  DOCKER_SETUP.md  HANDBOOK.md  INTEGRATION_GUIDE.md  LICENSE  PDF_ENHANCEMENT_SUMMARY.md  README.md  docker-compose.prod.yml  docker-compose.yml
cli/: .dockerignore  Dockerfile  cli.py  pyproject.toml  requirements-dev.txt
cli/core/: git_utils.py
cli/report/: PDF_GUIDE.md  PDF_REFERENCE.txt  builder.py  example_pdf_report.py  exporter.py  pdf_builder.py
cli/scanner/: file_scanner.py  git_history.py  pattern_engine.py  risk_engine.py
gvd/: cli.py
gvd/core/: models.py
gvd/report/: builder.py  exporter.py
gvd/scanner/: file_scanner.py  git_history.py  pattern_engine.py  risk_engine.py
gvd/utils/: logger.py
nginx/: nginx.conf
saas/: .dockerignore  .env.example  Dockerfile  README.md  app.py  auth.py  clone.py  github.py
saas/static/: style.css
saas/templates/: dashboard.html  login.html
